# zhongjie-platform

./: .env.example  .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  README.md  check_env.py  mediator-api-design.md  pyproject.toml  requirements.txt  start.py
.github/workflows/: test.yml
docs/: design-01-a2a-adaptation.md  design-02-delegation-flow.md  design-03-p0-p1-implementation-plan.md  v0.3-architecture.md
examples/: a2a_client_demo.py  e2e_demo.py
scripts/: migrate_add_owner.py  migrate_to_sqlite.py  verify_server.py
src/zhongjie/: __init__.py  utils.py
src/zhongjie/ai/: __init__.py  classify.py  extract.py  llm.py  models.py  prompts.py
src/zhongjie/api/: __init__.py  app.py  deps.py  schemas.py
src/zhongjie/collaboration/: handoff.py  (+6 more)
tests/: test_a2a_client.py  test_api_integration.py  test_data_dir_wiring.py  test_domain.py  test_governance.py  test_identity.py  test_infra.py  test_migration.py  test_p2_m10_candidate_acl.py  test_p2_m11_fee_share.py  test_p2_m12_acl.py  test_p2_m13_owner_check.py  test_p2_m14_integration.py  test_p3_m15_task.py  test_p3_m16_a2a_dispatcher.py  test_p3_m17_agent_card_service.py  test_p3_m18_task_service.py  test_p4_m19_delegation.py  test_p4_m20_delegation_service.py  test_p4_m21_billing.py  test_p4_m22_handoff.py  test_p4_m23_delegation_guards.py  test_p5_m23_trust.py  test_p5_m24_trust_engine.py  test_p5_m25_audit.py  test_p5_m26_event_wiring.py  test_p6_m27_matching.py  test_p6_m28_llm.py  test_p6_m29_extract_classify.py  test_protocol.py  test_registry.py
web/: admin.html  dashboard.html  dashboard_v2.html
(+43 files in other folders)
